# slideia

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  audit.json  brand-design-system.md  docker-compose.yml  mcp.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  turbo.json
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/backend/: .env.example  .env.test  .gitignore  README.md  graph_structure.md  package.json  pyproject.toml  requirements.txt
apps/backend/src/slideia/: main.py
apps/backend/src/slideia/api/: chat_routes.py  chat_schemas.py  routes.py  schemas.py
apps/backend/src/slideia/core/: config.py  logging.py  paths.py
apps/backend/src/slideia/domain/agent/: graph.py  nodes.py  state.py
apps/backend/src/slideia/domain/deck/: exporter.py  models.py  pdf_exporter.py  services.py
apps/backend/src/slideia/domain/llm/: interfaces.py  prompts.py
apps/backend/src/slideia/infra/: cache.py  image_fetcher.py  openrouter.py
apps/backend/src/slideia/mcp/: server.py
apps/backend/src/slideia/services/: __init__.py  ingest.py
apps/backend/tests/: conftest.py
apps/backend/tests/api/: test_export_pdf.py  test_export_pptx.py  test_generate_deck.py  test_generate_deck_stream.py  test_health.py  test_propose_outline.py  test_propose_outline_stream.py  test_regenerate_slide.py
apps/backend/tests/domain/: test_agent.py  test_themes.py
apps/backend/tests/domain/deck/: test_citations.py  test_exporter.py  test_pdf_exporter.py  test_services.py  test_services_streaming.py
apps/backend/tests/infra/: test_openrouter.py
apps/backend/tests/mcp/: test_mcp_server.py
apps/backend/tests/services/: test_ingest.py
apps/frontend/: .env.example  next.config.ts  package.json  pnpm-lock.yaml
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/app/chat/: page.tsx
apps/frontend/src/components/: DeckView.tsx  DownloadReady.tsx  EditableSlide.tsx  ErrorAlert.tsx  GenerationProgress.tsx  OutlineView.tsx  SlideForm.tsx  ThemeProvider.tsx  ThemeSelector.tsx  ThemeToggle.tsx
apps/frontend/src/components/chat/: ChatBubble.tsx  ChatBubbleWrapper.tsx  ChatInput.tsx  ChatMessage.tsx  ChatView.tsx
apps/frontend/src/components/landing/: Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  LandingPage.tsx  Navbar.tsx
apps/frontend/src/components/ui/: Logo.tsx
apps/frontend/src/contexts/: DeckContext.tsx  GenerationContext.tsx
apps/frontend/src/hooks/: useChat.ts  useChatStorage.ts
apps/frontend/src/lib/: apiClient.ts  motion.ts
apps/frontend/src/types/: api.ts  chat.ts
backend/: .env.example  .gitignore  pyproject.toml
backend/src/slideia/: main.py
backend/src/slideia/api/: routes.py  schemas.py
backend/src/slideia/core/: config.py  logging.py  paths.py
backend/src/slideia/domain/deck/: exporter.py  models.py  services.py
backend/src/slideia/domain/deck/templates/: base_template.pptx
backend/src/slideia/domain/llm/: prompts.py
backend/src/slideia/infra/: cache.py  openrouter.py
backend/src/slideia/mcp/: mcp.json  server.py
backend/tests/: conftest.py
backend/tests/api/: test_export_pptx.py  test_generate_deck.py  test_propose_outline.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/components/: OutlineView.tsx
frontend/src/lib/: apiClient.ts
src/slideia/: __init__.py  api.py  llm.py  server.py
src/slideia/tools/: exporter.py  generate_template.py
src/slideia/tools/templates/: base_template.pptx
src/slideia/utils/: cache.py
tests/: conftest.py  test_api.py  test_api_deck.py  test_exporter.py  test_exporter_pptx.py  test_llm.py  test_llm_tools.py  test_mcp_tools.py
