[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slideia"
version = "0.1.0"
description = "A Python package for slideia."
authors = [
    { name="Fideli Isaboke" }
]
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
