[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slideia"
version = "0.1.0"
description = "A Python package for slideia."
authors = [
    { name="Fidel Isaboke" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "python-pptx",
    "uvicorn",
    "mcp"
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]
dev = ["black", "isort", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
src_paths = ["src"]

[flake8]
max-line-length = 100
