[project]
name = "backend"
version = "0.7.1"
description = "Slideia Backend API"
authors = [{ name = "Fidelisaboke" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "langgraph>=1.2.4",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.32",
    "python-pptx>=1.0.2",
    "redis>=8.0.0",
    "reportlab>=4.5.1",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]
test = [
    "coverage>=7.14.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]
