[project]
name = "backend"
version = "0.8.0"
description = "Slideia Backend API"
authors = [{ name = "Fidelisaboke" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.137.2",
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "langgraph>=1.2.5",
    "pypdf>=5.1.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.32",
    "python-pptx>=1.0.2",
    "redis>=8.0.0",
    "reportlab>=5.0.0",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]
test = [
    "coverage>=7.14.1",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]
